# drone-racing

./: .gitignore  README.md  experiments.txt  pyproject.toml
artifacts/: policy_jax.msgpack  policy_jax_one_gate.msgpack
artifacts/harvest-2/: config.toml  metadata.json  model.msgpack
artifacts/level7-1/: config.toml  metadata.json  model.final.msgpack  model.msgpack
artifacts/low-cen-gate/: reset_bank.npz
artifacts/low-safe-ang/: config.toml  metadata.json  model.final.msgpack  model.msgpack
artifacts/rand-z-even-short-checkpoint/: config.toml  metadata.json  model.final.msgpack  model.msgpack
config/: baseline.toml  l4.toml  l6.toml  l7_comp_bonus.toml  l8.toml  level1.toml  level1_flat.toml  level_curriculum_1.toml  level_curriculum_2.toml  level_curriculum_3.toml  level_curriculum_5.toml  level_curriculum_7.toml  side_by_side.toml
drone_racing_rl/: __init__.py
drone_racing_rl/control/: __init__.py  altitude_bounce_controller.py  controller.py  pid_controller.py  rl_baseline.py  waypoint_controller.py
drone_racing_rl/envs/: __init__.py  drone_race.py  jax_env.py  race_core.py  real_race_env.py
drone_racing_rl/train/: actor_critic_models.py  experiment_io.py  ppo.py  train.py
drone_racing_rl/utils/: __init__.py  utils.py
ece484_fly/: __init__.py
ece484_fly/control/: __init__.py  altitude_bounce_controller.py  pid_controller.py  smoke_controller.py  waypoint_controller.py
ece484_fly/envs/: __init__.py  drone_race.py  jax_env.py  race_core.py
ece484_fly/train/: __init__.py  actor_critic_models.py  experiment_io.py  obs.py  ppo.py  train.py  utils.py
scripts/: check_track.py  debug_reward.py  debug_reward_attitude.py  deploy.py  harvest_reset_bank.py  inspect_env.py  run_train.py  run_train_jax.py  run_train_rsl_rl.py  run_vtrain.py  run_vtrain_jax.py  run_vtrain_jax_full.py  save_track_as_config.py  sim.py  smoke_jax_env.py  validate_attitude_actions.py  vec_sim.py  watch_policy.py  watch_policy_rsl_rl.py
tools/: setup_acados.sh
