[build-system]
requires = ["setuptools>=61.0.0", "wheel", "numpy>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-racing-rl"
version = "0.0.1"
description = "JAX PPO and simulation stack for autonomous drone racing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]


########################
# Pip Dependencies
########################
dependencies = ["fire >= 0.6.0", "numpy", "toml >= 0.10.2", "scipy", "flax", "distrax", "wandb"]

[project.optional-dependencies]
# option[sim]: basic simulation
sim = [
    "gymnasium[array-api] >= 1.2.0",
    "ml-collections >= 1.0",
    "packaging >= 24.0",
    "drone-models",
    "drone-controllers",
    "crazyflow @ git+https://github.com/utiasDSL/crazyflow.git@0.1.0b0",
    "jax == 0.7.2",
    "warp-lang",
]
# option[gpu]: simulation with gpu
gpu = ["jax[cuda12] == 0.7.2 ; sys_platform == 'linux'"]
# option[deploy]: deploy to real drones
deploy = [
    "cfclient",
    "cflib == 0.1.30",
    "drone-estimators",
]
# option[rl]: train rl policy
rl = ["torch == 2.8.0", "wandb"]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
drone_racing_rl = ["envs/assets/*.xml", "envs/assets/*.png"]

########################
# Pixi Sessions
########################

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
drone_racing_rl = { path = ".", editable = true }

# feature[kilted]
[tool.pixi.feature.kilted]
channels = ["https://prefix.dev/robostack-kilted"]

[tool.pixi.feature.kilted.dependencies]
# Build tools
compilers = "*"
cmake = "*"
pkg-config = "*"
make = "*"
ninja = "*"
# ROS specific tools
rosdep = "*"
colcon-common-extensions = "*"
# Kilted specific tools
ros-kilted-desktop = "*"
# Pin Boost <1.87 to avoid removed boost::asio::io_service in motion_capture_tracking
libboost-headers = ">=1.84,<1.87"

[tool.pixi.feature.kilted.activation]
scripts = ["tools/setup_mocap.sh"]

[tool.pixi.activation]
scripts = ["tools/setup_acados.sh"]

# environments
[tool.pixi.environments]
default = { features = ["sim", "gpu"], solve-group = "default" }
deploy = { features = ["sim", "gpu", "kilted", "deploy"] }
gpu = { features = ["sim", "gpu"], solve-group = "default" }

[tool.pixi.tasks]
sim = ".pixi/envs/default/bin/python scripts/sim.py"
vsim = ".pixi/envs/default/bin/python scripts/vec_sim.py"
deploy = ".pixi/envs/deploy/bin/python scripts/deploy.py"
debug = ".pixi/envs/default/bin/python scripts/debug_reward_attitude.py"
watch = ".pixi/envs/default/bin/python scripts/watch_policy.py"
train = ".pixi/envs/default/bin/python scripts/run_train_jax.py"
harvest = ".pixi/envs/default/bin/python scripts/harvest_reset_bank.py"

[tool.pixi.dependencies]
openblas = ">=0.3.30,<0.4"
python = ">=3.12,<3.13"
pip = ">=25.0.1,<26"
packaging = ">=25.0,<26"
cmake = "*"
compilers = ">=1.9.0, <1.11.0"
make = "*"
fire = "*"

[tool.ty.environment]
python = ".pixi/envs/default/bin/python"
